--- a/webgis_vue/package.json
+++ b/webgis_vue/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "maplibre-gl": "^4.7.1",
     "vue": "^3.5.12"
   },
   "devDependencies": {
